# siseli-ha

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  repository.yaml  sensor_mapping.md
.github/workflows/: ci.yml
powmr_bridge/: DOCS.md  Dockerfile  config.yaml  powmr_bridge.py  run.sh
siseli_bridge/: CHANGELOG.md  DOCS.md  config.yaml  requirements.txt  run.sh  siseli_bridge.py
siseli_bridge/src/siseli_bridge/: config.py  core.py  mqtt.py  parsers.py  sensors.py  state.py
siseli_bridge/tests/: conftest.py  test_config.py  test_flow_eviction.py  test_parsers.py  test_sensors.py
siseli_bridge/translations/: en.yaml
